header top is ready

--- a/index.html
+++ b/index.html
@@ -6,12 +6,27 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Git</title>
+  <link rel="stylesheet" href="./css/all.min.css">
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
   <header class="header">
-    
+    <div class="header__top">
+      <div class="container header__block">
+        <div class="header__map">
+          <a href="#" class="header__map-loc">
+            <i class="fas fa-map-marker-alt"></i>
+            Ваш город: Москва
+            <i class="fas fa-angle-down"></i>
+          </a>
+          <a href="#" class="header__map-loc">
+            <i class="far fa-clock"></i>
+            Пн-Пт 9:00 - 19:00
+          </a>
+        </div>
+      </div>
+    </div>
   </header>
 
 
