the project is divided

--- a/index.html
+++ b/index.html
@@ -27,13 +27,33 @@
         </div>
       </div>
     </div>
+    <nav class="header__nav">
+
+    </nav>
   </header>
 
 
-  <main></main>
+  <main>
+    <section class="begzod">
+
+    </section>
+
+    <section class="nozim">
+
+    </section>
+
+    <section class="saidamin">
+
+    </section>
 
 
-  <footer></footer>
+
+  </main>
+
+
+  <footer class="footer">
+    
+  </footer>
 
 
 </body>
