--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Git</title>
   <link rel="stylesheet" href="./css/all.min.css">
+  <link rel="stylesheet" href="./fonts/stylesheet.css">
   <link rel="stylesheet" href="./css/style.css">
+
 </head>
 
 <body>
@@ -52,7 +54,7 @@
 
 
   <footer class="footer">
-    
+
   </footer>
 
 
