--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
       </div>
     </div>
     <nav class="header__nav">
-
+      <h1>salom bu men</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum distinctio ab, numquam perferendis ducimus dolore error quod dignissimos in minus quidem, corrupti neque, quam officiis magni libero at nisi assumenda omnis. Rerum temporibus sint assumenda similique cumque qui illo impedit doloribus at quam hic perferendis, maiores magni consequatur facilis neque veritatis magnam quisquam in iusto deleniti fugit numquam. Blanditiis dolore, maiores necessitatibus quo id, est quidem deserunt, modi quaerat illo pariatur ratione eligendi optio vel. Veniam doloribus architecto laborum ipsa blanditiis nihil quia culpa quisquam delectus? Consequatur maiores qui blanditiis dicta architecto, ipsa unde dolorem eius? Fugit rem unde nam!
+      </p>
     </nav>
   </header>
 
