--- a/index.html
+++ b/index.html
@@ -37,7 +37,23 @@
 
   <main>
     <section class="begzod">
-
+      <div class="container"> 
+      <div class="begzod__block">
+        <div class="begzod__item">
+          <p class="begzod__item__title">Наборы для сыроделия</p>
+          <p class="begzod__item__text">Все что вам нужно для приготовления сыра в домашних условиях</p>
+          <a href="#" class="btn">Смотреть наборы</a>
+        </div>
+        <div class="begzod__item">
+          <p class="begzod__item__titlee">Рецепты</p>
+          <p class="bezgod__item__textt">Сыры с плесенью</p>
+        </div>
+        <div class="begzod__item">
+          <p class="begzod__item__titlee">Акции</p>
+          <p class="bezgod__item__textt">закваски для сыра</p>
+        </div>
+      </div>
+    </div>
     </section>
 
     <section class="nozim">
