--- a/index.html
+++ b/index.html
@@ -53,6 +53,318 @@
           <p class="bezgod__item__textt">закваски для сыра</p>
         </div>
       </div>
+
+      <div class="begzod__menuu">
+      <div class="begzod__menu">
+
+      <div class="begzod__menu1">
+      <a href="#" class="begzod__menu1__title">
+        <i class="fa-solid fa-cheese"></i>
+        Ингредиенты
+      </a>
+      <ul class="begzod__list">
+        <li><a href="#" class="begzod__link">Закваски для сыра</a></li>
+        <li><a href="#" class="begzod__link">Ферменты для сыра</a></li>
+        <li><a href="#" class="begzod__link">Хлористый кальций</a></li>
+        <li><a href="#" class="begzod__link">Плесень для сыра</a></li>
+        <li><a href="#" class="begzod__link">Кисломолочные закваски</a></li>
+        <li><a href="#" class="begzod__link">Красители для сыра</a></li>
+        <li><a href="#" class="begzod__link">Специи для сыра</a></li>
+      </ul>
+
+      </div>
+      <a href="#" class="begzod__menu1__titlee">
+        <i class="fa-solid fa-store"></i>
+        Оборудование
+      </a>
+      <ul class="begzod__list">
+        <li><a href="#" class="begzod__link">Формы для сыра</a></li>
+        <li><a href="#" class="begzod__link">Латексное покрытие</a></li>
+        <li><a href="#" class="begzod__link">Воск для сыра</a></li>
+        <li><a href="#" class="begzod__link">Термоусадочные пакеты</a></li>
+        <li><a href="#" class="begzod__link">Дренажные коврики</a></li>
+        <li><a href="#" class="begzod__linkk">Дренажные мешки и салфетки 
+          для прессования</a></li>
+        <li><a href="#" class="begzod__link">Дренажные контейнеры</a></li>
+      </ul>
+      </div>
+
+      <div class="begzod__menuuu">
+        <div class="menuuu__btn">
+        <a href="#" class="begzod_menuuu__btn">Популярные товары</a>
+        <a href="#" class="begzod_menuuu__btnn">Акции</a>
+        </div>
+
+        <p class="title">Ингредиенты</p>
+
+        <div class="begzod__menuuu__block">
+          <div class="begzod__menuuu__item">
+            <img src="./image/img3.png" alt="">
+            <div class="b">
+              <a href="#" class="p"></a>
+              <a href="#" class="pp"></a>
+            </div>
+            <p class="begzod__menuuu__item__title">Мезофильная закваска Danisco CHOOZIT MM...</p>
+            <img src="./image/logo.png" alt="">
+            <div class="info__btn">
+              <div class="info__btn1">
+              <p class="info__btn1__title">1300₽<span>/ 1 шт.</span></p>
+              <p class="info__btn1__text">1800₽</p>
+              </div>
+              <a href="#" class="btnnn">Добавить</a>
+            </div>
+          </div>
+          <div class="begzod__menuuu__item">
+            <img src="./image/img4.png" alt="">
+            <div class="b">
+              <a href="#" class="p"></a>
+              <a href="#" class="pp"></a>
+            </div>
+            <p class="begzod__menuuu__item__title">Душистый перец горошком (100г)</p>
+            <img src="./image/logo.png" alt="">
+            <div class="info__btn">
+              <div class="info__btn1">
+              <p class="info__btn1__title">200₽<span>/ 1 шт.</span></p>
+              <p class="info__btn1__text">320₽</p>
+              </div>
+              <a href="#" class="btnnn">Добавить</a>
+            </div>
+          </div>
+          <div class="begzod__menuuu__item">
+            <img src="./image/img5.png" alt="">
+            <div class="b">
+              <a href="#" class="p"></a>
+              <a href="#" class="pp"></a>
+            </div>
+            <p class="begzod__menuuu__item__title">Красный перец молотый (100г)</p>
+            <img src="./image/logo.png" alt="">
+            <div class="info__btn">
+              <div class="info__btn1">
+              <p class="info__btn1__title">380₽<span>/ 1 шт.</span></p>
+              <p class="info__btn1__text">400₽</p>
+              </div>
+              <a href="#" class="btnnn">Добавить</a>
+            </div>
+          </div>
+          <div class="begzod__menuuu__item">
+            <img src="./image/img6.png" alt="">
+            <div class="b">
+              <a href="#" class="p"></a>
+              <a href="#" class="pp"></a>
+            </div>
+            <p class="begzod__menuuu__item__title">Мускатный орех молотый (100г)</p>
+            <img src="./image/logo.png" alt="">
+            <div class="info__btn">
+              <div class="info__btn1">
+              <p class="info__btn1__title">420₽<span>/ 1 шт.</span></p>
+              <p class="info__btn1__text">560₽</p>
+              </div>
+              <a href="#" class="btnnn">Добавить</a>
+            </div>
+          </div>
+          <div class="begzod__menuuu__item">
+            <img src="./image/img7.png" alt="">
+            <div class="b">
+              <a href="#" class="p"></a>
+              <a href="#" class="pp"></a>
+            </div>
+            <p class="begzod__menuuu__item__title">Форма для твердого сыра 1 кг</p>
+            <img src="./image/logo.png" alt="">
+            <div class="info__btn">
+              <div class="info__btn1">
+              <p class="info__btn1__title">1300₽<span>/ 1 шт.</span></p>
+              <p class="info__btn1__text">1800₽</p>
+              </div>
+              <a href="#" class="btnnn">Добавить</a>
+            </div>
+          </div>
+          <div class="begzod__menuuu__item">
+            <img src="./image/img8.png" alt="">
+            <div class="b">
+              <a href="#" class="p"></a>
+              <a href="#" class="pp"></a>
+            </div>
+            <p class="begzod__menuuu__item__title">Душистый перец горошком (100г)</p>
+            <img src="./image/logo.png" alt="">
+            <div class="info__btn">
+              <div class="info__btn1">
+              <p class="info__btn1__title">200₽<span>/ 1 шт.</span></p>
+              <p class="info__btn1__text">320₽</p>
+              </div>
+              <a href="#" class="btnnn">Добавить</a>
+            </div>
+          </div>
+          <div class="begzod__menuuu__item">
+            <img src="./image/img9.png" alt="">
+            <div class="b">
+              <a href="#" class="p"></a>
+              <a href="#" class="pp"></a>
+            </div>
+            <p class="begzod__menuuu__item__title">Красный перец молотый (100г)</p>
+            <img src="./image/logo.png" alt="">
+            <div class="info__btn">
+              <div class="info__btn1">
+              <p class="info__btn1__title">380₽<span>/ 1 шт.</span></p>
+              <p class="info__btn1__text">400₽</p>
+              </div>
+              <a href="#" class="btnnn">Добавить</a>
+            </div>
+          </div>
+          <div class="begzod__menuuu__item">
+            <img src="./image/img10.png" alt="">
+            <div class="b">
+              <a href="#" class="p"></a>
+              <a href="#" class="pp"></a>
+            </div>
+            <p class="begzod__menuuu__item__title">Мускатный орех молотый (100г)</p>
+            <img src="./image/logo.png" alt="">
+            <div class="info__btn">
+              <div class="info__btn1">
+              <p class="info__btn1__title">420₽<span>/ 1 шт.</span></p>
+              <p class="info__btn1__text">560₽</p>
+              </div>
+              <a href="#" class="btnnn">Добавить</a>
+            </div>
+          </div>
+        </div>
+        <p class="titlee">Оборудование</p>
+        <div class="begzod__menuuu__block">
+          <div class="begzod__menuuu__item">
+            <img src="./image/img3.png" alt="">
+            <div class="b">
+              <a href="#" class="p"></a>
+              <a href="#" class="pp"></a>
+            </div>
+            <p class="begzod__menuuu__item__title">Мезофильная закваска Danisco CHOOZIT MM...</p>
+            <img src="./image/logo.png" alt="">
+            <div class="info__btn">
+              <div class="info__btn1">
+              <p class="info__btn1__title">1300₽<span>/ 1 шт.</span></p>
+              <p class="info__btn1__text">1800₽</p>
+              </div>
+              <a href="#" class="btnnn">Добавить</a>
+            </div>
+          </div>
+          <div class="begzod__menuuu__item">
+            <img src="./image/img4.png" alt="">
+            <div class="b">
+              <a href="#" class="p"></a>
+              <a href="#" class="pp"></a>
+            </div>
+            <p class="begzod__menuuu__item__title">Душистый перец горошком (100г)</p>
+            <img src="./image/logo.png" alt="">
+            <div class="info__btn">
+              <div class="info__btn1">
+              <p class="info__btn1__title">200₽<span>/ 1 шт.</span></p>
+              <p class="info__btn1__text">320₽</p>
+              </div>
+              <a href="#" class="btnnn">Добавить</a>
+            </div>
+          </div>
+          <div class="begzod__menuuu__item">
+            <img src="./image/img5.png" alt="">
+            <div class="b">
+              <a href="#" class="p"></a>
+              <a href="#" class="pp"></a>
+            </div>
+            <p class="begzod__menuuu__item__title">Красный перец молотый (100г)</p>
+            <img src="./image/logo.png" alt="">
+            <div class="info__btn">
+              <div class="info__btn1">
+              <p class="info__btn1__title">380₽<span>/ 1 шт.</span></p>
+              <p class="info__btn1__text">400₽</p>
+              </div>
+              <a href="#" class="btnnn">Добавить</a>
+            </div>
+          </div>
+          <div class="begzod__menuuu__item">
+            <img src="./image/img6.png" alt="">
+            <div class="b">
+              <a href="#" class="p"></a>
+              <a href="#" class="pp"></a>
+            </div>
+            <p class="begzod__menuuu__item__title">Мускатный орех молотый (100г)</p>
+            <img src="./image/logo.png" alt="">
+            <div class="info__btn">
+              <div class="info__btn1">
+              <p class="info__btn1__title">420₽<span>/ 1 шт.</span></p>
+              <p class="info__btn1__text">560₽</p>
+              </div>
+              <a href="#" class="btnnn">Добавить</a>
+            </div>
+          </div>
+          <div class="begzod__menuuu__item">
+            <img src="./image/img7.png" alt="">
+            <div class="b">
+              <a href="#" class="p"></a>
+              <a href="#" class="pp"></a>
+            </div>
+            <p class="begzod__menuuu__item__title">Форма для твердого сыра 1 кг</p>
+            <img src="./image/logo.png" alt="">
+            <div class="info__btn">
+              <div class="info__btn1">
+              <p class="info__btn1__title">1300₽<span>/ 1 шт.</span></p>
+              <p class="info__btn1__text">1800₽</p>
+              </div>
+              <a href="#" class="btnnn">Добавить</a>
+            </div>
+          </div>
+          <div class="begzod__menuuu__item">
+            <img src="./image/img8.png" alt="">
+            <div class="b">
+              <a href="#" class="p"></a>
+              <a href="#" class="pp"></a>
+            </div>
+            <p class="begzod__menuuu__item__title">Душистый перец горошком (100г)</p>
+            <img src="./image/logo.png" alt="">
+            <div class="info__btn">
+              <div class="info__btn1">
+              <p class="info__btn1__title">200₽<span>/ 1 шт.</span></p>
+              <p class="info__btn1__text">320₽</p>
+              </div>
+              <a href="#" class="btnnn">Добавить</a>
+            </div>
+          </div>
+          <div class="begzod__menuuu__item">
+            <img src="./image/img9.png" alt="">
+            <div class="b">
+              <a href="#" class="p"></a>
+              <a href="#" class="pp"></a>
+            </div>
+            <p class="begzod__menuuu__item__title">Красный перец молотый (100г)</p>
+            <img src="./image/logo.png" alt="">
+            <div class="info__btn">
+              <div class="info__btn1">
+              <p class="info__btn1__title">380₽<span>/ 1 шт.</span></p>
+              <p class="info__btn1__text">400₽</p>
+              </div>
+              <a href="#" class="btnnn">Добавить</a>
+            </div>
+          </div>
+          <div class="begzod__menuuu__item">
+            <img src="./image/img10.png" alt="">
+            <div class="b">
+              <a href="#" class="p"></a>
+              <a href="#" class="pp"></a>
+            </div>
+            <p class="begzod__menuuu__item__title">Мускатный орех молотый (100г)</p>
+            <img src="./image/logo.png" alt="">
+            <div class="info__btn">
+              <div class="info__btn1">
+              <p class="info__btn1__title">420₽<span>/ 1 шт.</span></p>
+              <p class="info__btn1__text">560₽</p>
+              </div>
+              <a href="#" class="btnnn">Добавить</a>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+
+
+
+    </div>
     </div>
     </section>
 
