--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
       </div>
     </div>
     <nav class="header__nav">
-      <h1>salom bu men</h1>
+      <!-- <h1>salom bu men</h1>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum distinctio ab, numquam perferendis ducimus dolore error quod dignissimos in minus quidem, corrupti neque, quam officiis magni libero at nisi assumenda omnis. Rerum temporibus sint assumenda similique cumque qui illo impedit doloribus at quam hic perferendis, maiores magni consequatur facilis neque veritatis magnam quisquam in iusto deleniti fugit numquam. Blanditiis dolore, maiores necessitatibus quo id, est quidem deserunt, modi quaerat illo pariatur ratione eligendi optio vel. Veniam doloribus architecto laborum ipsa blanditiis nihil quia culpa quisquam delectus? Consequatur maiores qui blanditiis dicta architecto, ipsa unde dolorem eius? Fugit rem unde nam!
-      </p>
+      </p> -->
     </nav>
   </header>
 
@@ -44,7 +44,116 @@
     </section>
 
     <section class="nozim">
+      <div class="nozim__top">
+        <img class="top__in" src="./img/Mask Group (4).png" alt="">
+        <div class="container">
+          <h2 class="top__title">Наши преимущества</h2>
+          <p class="top__text">Мы лично отвечаем за качество товара и всегда
+            с радостью поможем Вам с выбором</p>
+          <div class="card">
+            <div class="card__item one">
+              <a href="#" class="soat"><img src="./img/card soat.png" alt=""></a>
+              <img class="svg" src="./img/icon10.svg" alt="">
+              <a href="#"><img class="rise" src="./img/Rise +.png" alt=""></a>
+              <p class="card__text">Прием заказов круглостуточно</p>
+            </div>
+            <div class="card__item two">
+              <a href="#" class="soat "><img class="bayroq" src="./img/card-bayroq.png" alt=""></a>
+              <img class="svg svg__two" src="./img/icon10.svg" alt="">
+              <a href="#"><img class="rise rise__two" src="./img/Rise +.png" alt=""></a>
+              <p class="card__text card__text-two">Наивысшее качество продукции</p>
+            </div>
+            <div class="card__item thre">
+              <a href="#" class="soat "><img class="dollar" src="./img/card dollar.png" alt=""></a>
+              <img class="svg svg__thre" src="./img/icon10.svg" alt="">
+              <a href="#"><img class="rise rise__thre" src="./img/Rise +.png" alt=""></a>
+              <p class="card__text card__text-two">Выгодные цены и условия</p>
+            </div>
+            <div class="card__item fou">
+              <a href="#" class="soat "><img class="dollar" src="./img/card foiz.png" alt=""></a>
+              <img class="svg svg__fou" src="./img/icon10.svg" alt="">
+              <a href="#"><img class="rise rise__fou" src="./img/Rise +.png" alt=""></a>
+              <p class="card__text card__text-two">Выгодные скидки при оплате</p>
+            </div>
+            <div class="card__item fie">
+              <a href="#" class="soat "><img class="dollar" src="./img/class.png" alt=""></a>
+              <img class="svg svg__four" src="./img/icon10.svg" alt="">
+              <a href="#"><img class="rise rise__four" src="./img/Rise +.png" alt=""></a>
+              <p class="card__text card__text-two">Обеспечиваем высокий уровень сервиса</p>
+            </div>
+          </div>
 
+          <div class="nozim__main">
+            <h1 class="nozim__title">Мы подобрали для вас</h1>
+            <div class="image">
+              <div class="one__img">
+                <h1 class="img__title">более 1000 лучших рецептов</h1>
+                <p class="img__text">Мы собрали для Вас большую
+                  базу рецептов.</p>
+                <a href="#" class="btn">Перейти</a>
+              </div>
+              <div class="two__img">
+                <h1 class="img__title img__title-two">крутые Наборы для сыра</h1>
+                <p class="img__text img__text-two">Мы собрали для Вас большую
+                  базу рецептов.</p>
+                <a href="#" class="btn">Перейти</a>
+              </div>
+            </div>
+            <h1 class="nozim__title nozim__title-two">Мы подобрали для вас</h1>
+
+          </div>
+        </div>
+        <div class="center__img">
+          <div class="container">
+            <h1 class="img__title center__title">Прессы для сыра</h1>
+            <p class="img__text center__text">Пресс можно использовать для прессования твердых сыров. Он разбирается, и
+              вы можете компактноего упаковать в коробку.</p>
+            <a href="#" class="btn btn__two">Узнать больше</a>
+            <a href="#"><img class="navigation" src="./img/Navigation.png" alt=""></a>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="grid">
+          <div class="grid__item">
+            <h1 class="img__title grid__title">Статьи про сыроделие</h1>
+            <p class="img__text grid__text">Мы собрали самые интересные и полезные новости о акциях, скидках и мире
+              сыроделия.</p>
+            <a href="#" class="btn grid__btn">Читать все статьи</a>
+          </div>
+          <div class="grid__item">
+            <img src="./img/grid1.png" alt="">
+            <h3 class="syro__title">Сырная тарелка</h3>
+            <p class="syro__text">Так называется блюдо, которое состоит из разных сортов сыра. </p>
+            <a href="#" class="chitat">Читать далее </a>
+            <i class="fa-solid fa-angle-right"></i>
+          </div>
+          <div class="grid__item">
+            <img src="./img/grid2.png" alt="">
+            <h3 class="syro__title">Откуда в сыре дырки?</h3>
+            <p class="syro__text">Особенно характерно наличие дырочек разных размеров в структуре швейцарских сортов...
+            </p>
+            <a href="#" class="chitat">Читать далее </a>
+            <i class="fa-solid fa-angle-right"></i>
+          </div>
+          <div class="grid__item">
+            <img src="./img/grid4.png" alt="">
+            <h3 class="syro__title">Сырная диета</h3>
+            <p class="syro__text">Из-за недостатка физической активности и стабильного переедания образуется лишний...
+            </p>
+            <a href="#" class="chitat">Читать далее </a>
+            <i class="fa-solid fa-angle-right"></i>
+          </div>
+          <div class="grid__item">
+            <img src="./img/grid5.png" alt="">
+            <h3 class="syro__title">посол сырной головки</h3>
+            <p class="syro__text">Особенно характерно наличие дырочек разных размеров в структуре швейцарских сортов...
+            </p>
+            <a href="#" class="chitat">Читать далее </a>
+            <i class="fa-solid fa-angle-right"></i>
+          </div>
+        </div>
+      </div>
     </section>
 
     <section class="saidamin">
